--- a/ks.cfg
+++ b/ks.cfg
@@ -1,9 +1,9 @@
 install
-url --url http://ftp.riken.jp/Linux/centos/7.0.1406/os/x86_64/
+url --url http://mirror.yandex.ru/centos/7.1.1503/os/x86_64/
 
 lang en_US.UTF-8
 keyboard us
-timezone Asia/Tokyo
+timezone Europe/Moscow
 
 network --device=em0 --bootproto=dhcp --ipv6=auto
 firewall --enable --ssh
@@ -40,6 +40,9 @@ kernel-headers
 
 %post
 yum update -y
+
+# update root certs
+wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
 
 # disable unnecessary services
 chkconfig acpid off
